# max31865

./: CMakeLists.txt  max31865.c  max31865.h  max31865_config.h  max31865_registers.h
